# libnss-maria

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  docker-compose.yml  random_notes.txt
src/: CMakeLists.txt
src/configuration/: maria_config_helpers.c  maria_config_struct.h
src/logger/: maria_logger.c  maria_logger.h
src/mariadb/: query.c
src/nss/: bsdnss.c  group.c  passwd.c  result_handler.c  result_handler.h
test/fixtures/: lots_of_group_members.sql
test/integration/: lots_of_group_members.bats
test/support/: generators.sh
vagrant_debian/: Vagrantfile
vagrant_fedora/: Vagrantfile
